<resources>
    <string name="app_name">Lab3</string>
    <string name="activity_1">Activity 1</string>
    <string name="to_second">to second</string>
    <string name="activity_about">to about</string>
    <string name="activity_2">Activity 2</string>
    <string name="to_first">to first</string>
    <string name="to_third">to third</string>
    <string name="activity_3">Activity 3</string>
    <string name="text_activity_about">Activity About</string>
    <string name="back">Back</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="fragment_3">Fragment 3</string>
</resources>