<?xml version="1.0" encoding="utf-8"?>

<layout>
<data>

</data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment3"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_fragment"
            android:text="@string/fragment_3"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:id="@+id/bnToFirst"
            android:text="@string/to_first"
            app:layout_constraintTop_toBottomOf="@id/text_fragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:id="@+id/bnToSecond"
            android:text="@string/to_second"
            app:layout_constraintTop_toBottomOf="@+id/bnToFirst"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
