<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.lab3.MainActivity"
        android:id="@+id/drawer_layout">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment1">

            <TextView
                android:id="@+id/text_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_1"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/bnToSecond"
                android:text="@string/to_second"
                android:layout_width="200dp"
                android:layout_height="75dp"
                app:layout_constraintTop_toBottomOf="@id/text_activity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="100dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true">

            <Button
                android:id="@+id/bnToAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_about"
                android:layout_gravity="center"/>

        </com.google.android.material.navigation.NavigationView>


    </androidx.drawerlayout.widget.DrawerLayout>
</layout>


